--- a/app/Admin/Training/View/tpl/view-header.html
+++ b/app/Admin/Training/View/tpl/view-header.html
@@ -1,10 +1,16 @@
 <div class="row mb-5">
     <div class="col-auto mr-auto">
-        <h1 class="page-heading mb-0">{{ trainingContent.title }}</h1>
+        <h1 class="page-heading mb-0"><i class="fa fa-graduation-cap"></i> {{ trainingContent.pageType | trainingTypePageName }} - {{ trainingContent.title }}</h1>
     </div>
     <div class="col-auto justify-content-end">
         <nav class="mt-4">
             <ul class="nav nav-pills">
+                <li class="nav-item" ng-if="previousContent == null">
+                    <span class="badge badge-danger">Contenu d'introduction</span>
+                </li>
+                <li class="nav-item" ng-if="nextContent == null">
+                    <span class="badge badge-danger">Contenu de conclusion</span>
+                </li>
                 <li class="nav-item">
                     <a class="btn btn-light" ui-sref="transcript.admin.training.edit({id: trainingContent.id})"><i class="fa fa-edit fa-lg"></i> Modifier</a>
                 </li>
