--- a/app/App/Taxonomy/View/View.html
+++ b/app/App/Taxonomy/View/View.html
@@ -1,9 +1,9 @@
 <div  class="container">
     <div ncy-breadcrumb></div>
-    <div flash-alert data-active-class="in alert" class="fade" data-duration="10000">
+    <div flash-alert active-class="in alert" class="fade" duration="10000">
         <!-- Manually hide the alert with `hide()` -->
         <button type="button" class="close" ng-click="hide()">&times;</button>
-        <span class="alert-message" data-ng-bind-html="flash.message"></span>
+        <span class="alert-message" ng-bind-html="flash.message"></span>
     </div>
     <div ng-if="(user.roles | contains:'ROLE_TAXONOMY_EDIT') == false && (preferences.taxonomyEditAccess == 'selfAuthorization' || preferences.taxonomyEditAccess == 'controlledAuthorization')" ng-include="'App/Taxonomy/tpl/ask-edit-access.html'"></div>
 </div>
@@ -12,26 +12,26 @@
     <div class="row">
         <div class="col-sm-8">
             <nav>
-                <div class="float-right" ng-if="((user.roles | contains:'ROLE_TAXONOMY_EDIT') && (preferences.taxonomyEditAccess == 'selfAuthorization' || preferences.taxonomyEditAccess == 'controlledAuthorization')) || preferences.taxonomyEditAccess == 'free'">
+                <div class="float-right mt-3" ng-if="((user.roles | contains:'ROLE_TAXONOMY_EDIT') && (preferences.taxonomyEditAccess == 'selfAuthorization' || preferences.taxonomyEditAccess == 'controlledAuthorization')) || preferences.taxonomyEditAccess == 'free'">
                     <a class="btn btn-light" ui-sref="transcript.app.taxonomy.edit({type: entity.dataType, id: entity.id})"><i class="fa fa-edit"></i> Modifier</a>
                 </div>
                 <h1 class="page-heading">{{ entity.name }}</h1>
             </nav>
 
-            <div data-ng-if="entity.dataType == 'places' && entity.geographicalCoordinates != null">
+            <div ng-if="entity.dataType == 'places' && entity.geographicalCoordinates != null">
                 <leaflet markers="markers" tiles="tiles" lf-center="center" height="250px" width="100%"></leaflet>
                 <br />
             </div>
             <div>
-                <div data-ng-if="entity.dataType == 'testators'" data-ng-include="'App/Taxonomy/View/tpl/testator-metadata.html'"></div>
-                <div data-ng-if="entity.dataType == 'places'" data-ng-include="'App/Taxonomy/View/tpl/place-metadata.html'"></div>
-                <div data-ng-if="entity.dataType == 'military-units'" data-ng-include="'App/Taxonomy/View/tpl/military-unit-metadata.html'"></div>
+                <div ng-if="entity.dataType == 'testators'" ng-include="'App/Taxonomy/View/tpl/testator-metadata.html'"></div>
+                <div ng-if="entity.dataType == 'places'" ng-include="'App/Taxonomy/View/tpl/place-metadata.html'"></div>
+                <div ng-if="entity.dataType == 'military-units'" ng-include="'App/Taxonomy/View/tpl/military-unit-metadata.html'"></div>
             </div>
-            <div class="mt-4 mb-4 ml-2" data-ng-if="entity.description != '' && entity.description != null">
-                <h4 data-ng-if="entity.dataType == 'testators'" class="mb-1"><strong>Biographie</strong></h4>
+            <div class="mt-4 mb-4 ml-2" ng-if="entity.description != '' && entity.description != null">
+                <h4 ng-if="entity.dataType == 'testators'" class="mb-1"><strong>Biographie</strong></h4>
                 {{ entity.description }}
             </div>
         </div>
-        <div class="col-sm-4 pl-0 pr-0 bg-white" data-ng-include="'App/Taxonomy/tpl/entities.html'"></div>
+        <div class="col-sm-4 pl-0 pr-0 pb-2 bg-white" ng-include="'App/Taxonomy/tpl/entities.html'"></div>
     </div>
 </main>
