Various template integration, update tag insert management, update note management

--- a/app/web/custom/css/style.css
+++ b/app/web/custom/css/style.css
@@ -1423,6 +1423,9 @@ input[type=text]{
 .text-success .custom-control-input:checked ~ .custom-control-indicator {
 	background-color: #1b9543!important;
 }
+.text-white {
+	color: #FFF;
+}
 .form-control:-ms-input-placeholder {
 	color: #8Faebd;
 }
