--- a/app/App/Taxonomy/View/tpl/place-metadata.html
+++ b/app/App/Taxonomy/View/tpl/place-metadata.html
@@ -31,8 +31,8 @@
             </div>
             <div class="col-md-10">
                 <a class="nomTestataire" ui-sref="transcript.app.taxonomy.view({ type: 'testators', id: testator.id })">{{ testator.name }}</a>
-                <p ng-if="testator.placeOfDeath != null">Originaire de {{ entity.name }}</p>
-                <p ng-if="testator.placeOfDeath == null">Décédé à {{ entity.name }}</p>
+                <p ng-if="testator.placeOfDeathNormalized != null">Originaire de {{ entity.name }}</p>
+                <p ng-if="testator.placeOfDeathNormalized == null">Décédé à {{ entity.name }}</p>
             </div>
         </div>
     </div>
