--- a/app/App/Taxonomy/View/tpl/place-metadata.html
+++ b/app/App/Taxonomy/View/tpl/place-metadata.html
@@ -1,4 +1,4 @@
-<h3>Localisation actuelle</h3>
+<h3>Localisation <!--actuelle--></h3>
 <dl class="row pr-3 ml-1">
     <dt class="col-sm-4">Localisation</dt>
     <dd class="col-sm-8">
@@ -21,22 +21,22 @@
     </dd>
 </dl>
 
-<h3>Localisations durant la Première Guerre mondiale</h3>
+<!--<h3>Localisations durant la Première Guerre mondiale</h3>-->
 
 <div class="row mt-5">
     <div class="col-md-12 ml-2">
-        <h4 class="mb-2"><strong>Testateurs en lien avec ce lieu</strong></h4>
-        <div class="row mt-4" ng-repeat="testator in entity._embedded.testators">
+        <h3 class="mb-2"><strong>Testateurs en lien avec ce lieu</strong></h3>
+        <div class="row mt-4" ng-repeat="testatorContainer in entity._embedded.testators">
             <div class="col-md-1 pr-0">
                 <a ui-sref="transcript.app.taxonomy.view({ type: 'testators', id: testator.id })" >
-                    <img src="./web/images/default-testator.png" class="img-fluid" />
+                    <img src="/webapp/app/web/images/default-testator.png" class="img-fluid" />
                 </a>
             </div>
             <div class="col-md-10">
-                <a class="nomTestataire" ui-sref="transcript.app.taxonomy.view({ type: 'testators', id: testator.id })">{{ testator.name }}</a>
-                <p ng-if="testator.placeOfBirthNormalized != null && testator.placeOfBirthNormalized.id == entity.id">Originaire de {{ entity.name }}</p>
-                <p ng-if="testator.placeOfDeathNormalized != null && testator.placeOfDeathNormalized.id == entity.id">Décédé à {{ entity.name }}</p>
-                <p ng-if="testator.addressCity != null && testator.addressCity.id == entity.id">A vécu à {{ entity.name }}</p>
+                <a class="nomTestataire" ui-sref="transcript.app.taxonomy.view({ type: 'testators', id: testatorContainer.testator.id })">{{ testatorContainer.testator.name }}</a>
+                <p ng-if="testatorContainer.reason === 'bornHere'">Originaire de {{ entity.name }}</p>
+                <p ng-if="testatorContainer.reason === 'diedHere'">Décédé à {{ entity.name }}</p>
+                <p ng-if="testatorContainer.reason === 'livedHere'">A vécu à {{ entity.name }}</p>
             </div>
         </div>
     </div>
